hphp/hack/test/typecheck/memoize/array_of_bad_class.php.exp
File "array_of_bad_class.php", line 7, characters 48-51:
Parameters to memoized function must be null, bool, int, float, string, an object deriving IMemoizeParam, or a Container thereof. See also http://docs.hhvm.com/hack/attributes/special#__memoize (Typing[4149])
  File "array_of_bad_class.php", line 7, characters 43-45:
  This is an object of type Bar
  File "hackarray.hhi", line 52, characters 72-72:
    via this generic `T`
  File "hackarray.hhi", line 22, characters 35-36:
    via this generic `Tv`
  File "interfaces.hhi", line 115, characters 23-24:
    via this generic `Tv`
